# untitled-engine

./: CMakeLists.txt  README.md
include/engine/: Animation.h  Animator.h  Camera.h  Clock.h  Collider.h  Engine.h  Key.h  RenderObject.h  Sprite.h  State.h
include/game/: Decoration.h  Player.h
src/engine/: Animation.cpp  Animator.cpp  Camera.cpp  Clock.cpp  Engine.cpp  Key.cpp  RenderObject.cpp  Sprite.cpp  State.cpp  main.cpp
src/game/: Decoration.cpp  Player.cpp
